--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "request": "^2.83.0"
+  },
+  "engines": {
+    "node": "8.7.0"
   }
 }
