--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Slack app to find and notify you about Rentable living arrangements with a given search criteria.",
   "main": "index.js",
   "scripts": {
+    "knex": "knex",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,6 +14,8 @@
     "body-parser": "^1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
+    "knex": "^0.13.0",
+    "pg": "^7.3.0",
     "request": "^2.83.0"
   },
   "engines": {
