--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "knex": "knex",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "knex migrate:latest",
+    "nf": "nf start",
+    "nodemon": "nodemon server.js"
   },
   "author": "",
   "license": "MIT",
@@ -16,7 +19,8 @@
     "express": "^4.16.2",
     "knex": "^0.13.0",
     "pg": "^7.3.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "sqlite3": "^3.1.13"
   },
   "engines": {
     "node": "8.7.0"
