--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "knex": "^0.13.0",
     "pg": "^7.3.0",
     "request": "^2.83.0",
-    "sqlite3": "^3.1.13"
+    "sqlite3": "^3.1.13",
+    "uuid": "^3.1.0"
   },
   "engines": {
     "node": "8.7.0"
